[gd_scene load_steps=9 format=2]

[ext_resource path="res://mocraAdventure/player_tag/Player_tag.tscn" type="PackedScene" id=1]
[ext_resource path="res://mocraAdventure/game_end/textures/default.png" type="Texture" id=2]
[ext_resource path="res://ubuntu150.tres" type="DynamicFont" id=3]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=4]
[ext_resource path="res://background.png" type="Texture" id=5]
[ext_resource path="res://mocraAdventure/game_end/Control.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "display"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("stars/star1TextureRect:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 315, -0.25, 0, 0.25, 0, 734, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("stars/star1TextureRect:rect_position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -185, -0.25, 0, 0.25, 0, 250, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("stars/star2TextureRect:rect_position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 884, -0.25, 0, 0.25, 0, 884, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.5, 2 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("stars/star2TextureRect:rect_position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -212, -0.25, 0, 0.25, 0, 44, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.5, 2 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("stars/star3TextureRect:rect_position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1389, -0.25, 0, 0.25, 0, 1034, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 1.5 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("stars/star3TextureRect:rect_position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -188, -0.25, 0, 0.25, 0, 250, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 1.5 )
}

[sub_resource type="Animation" id=2]
resource_name = "init"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("stars:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("stars:rect_position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="game_end" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ -34.0 ],
"_edit_vertical_guides_": [ 468.0 ]
}

[node name="backgroundTextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="stars" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )

[node name="star1TextureRect" type="TextureRect" parent="stars"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -645.0
margin_top = -725.0
margin_right = -545.0
margin_bottom = -625.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="star2TextureRect" type="TextureRect" parent="stars"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.9999
margin_top = -752.0
margin_right = 24.0001
margin_bottom = -652.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="star3TextureRect" type="TextureRect" parent="stars"]
anchor_left = 1.25
anchor_top = 1.25
anchor_right = 1.25
anchor_bottom = 1.25
margin_left = -1011.0
margin_top = -1538.0
margin_right = -911.0
margin_bottom = -1438.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="playerTag1" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 88.0
margin_top = 581.0
margin_right = 738.0
margin_bottom = 881.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="playerTag2" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 701.0
margin_top = 581.0
margin_right = 1351.0
margin_bottom = 881.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="playerTag3" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1334.0
margin_top = 581.0
margin_right = 1984.0
margin_bottom = 881.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="nameLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -141.0
margin_right = 104.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "NA"

[node name="replayButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -266.0
margin_top = 360.0
margin_right = -144.0
margin_bottom = 412.0
theme = ExtResource( 4 )
text = "replay"

[node name="quitButton" type="Button" parent="."]
margin_left = 1554.0
margin_top = 900.0
margin_right = 1636.0
margin_bottom = 952.0
theme = ExtResource( 4 )
text = "quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/display = SubResource( 1 )
anims/init = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )

[connection signal="pressed" from="quitButton" to="." method="_on_quitButton_pressed"]
